# client-sdks

./: .gitignore  .gitmodules  Dockerfile  README.md  generate-sdks.sh  generate-spec.sh  generate.sh  openapi.json
python/: README.md  pyproject.toml  setup.py
python/.openapi-generator/: FILES
python/docs/: CloudFederationApiAddShare.md  CloudFederationApiCapabilities.md  CloudFederationApiError.md  CloudFederationApiRequestHandlerApi.md  CloudFederationApiValidationError.md  CloudFederationApiValidationErrorAllOf.md  CloudFederationApiValidationErrorAllOfValidationErrors.md  CoreApi.md  CoreAppPasswordApi.md  CoreAppPasswordGetAppPassword200Response.md  CoreAppPasswordGetAppPassword200ResponseOcs.md  CoreAppPasswordGetAppPassword200ResponseOcsData.md  CoreAutoCompleteApi.md  CoreAutoCompleteGet200Response.md  CoreAutoCompleteGet200ResponseOcs.md  CoreAutocompleteResult.md  CoreAvatarApi.md  CoreClientFlowLoginV2Api.md  CoreCollaborationResourcesApi.md  CoreCollaborationResourcesListCollection200Response.md  CoreCollaborationResourcesListCollection200ResponseOcs.md  CoreCollaborationResourcesSearchCollections200Response.md  CoreCollaborationResourcesSearchCollections200ResponseOcs.md  CoreCollection.md  CoreContactsAction.md  CoreGuestAvatarApi.md  CoreHoverCardApi.md  CoreHoverCardGetUser200Response.md  CoreHoverCardGetUser200ResponseOcs.md  CoreHoverCardGetUser200ResponseOcsData.md  CoreLoginFlowV2.md  CoreLoginFlowV2Credentials.md  CoreLoginFlowV2Poll.md  CoreNavigationApi.md  CoreNavigationEntry.md  CoreOcsApi.md  (+231 more)
rust/: Cargo.toml  README.md  git_push.sh
(+3291 files in other folders)
