[tool.poetry]
name = "openapi_client"
version = "1.0.0"
description = "nextcloud"
authors = ["OpenAPI Generator Community <team@openapitools.org>"]
license = "agpl"
readme = "README.md"
repository = "https://github.com/nextcloud/api-sdk"
keywords = ["OpenAPI", "OpenAPI-Generator", "nextcloud"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
